--- a/.gitignore
+++ b/.gitignore
@@ -11,5 +11,11 @@
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
 
+# IDE files
+.idea
+
+*.DS_Store
+*.thumb
+
 # Dependency directories (remove the comment below to include it)
 # vendor/
